css/main.css
/* ... */
.top-menu .navbar li {
    display: inline-block;
    margin: 0 10px;
}

.top-menu .navbar li a {
    -webkit-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
    /* font-size: 12px; */
    font-size: 14px;
    color: rgba(65, 64, 66, 1.0);
    text-align: center;
}

.top-menu .navbar li.active a {
    color: #F15A29
}

.top-menu .primary-button {
    font-size: 12px;
    height: 32px;
    width: 89px;
    margin: 0;
    border-radius: 16px;
    border: 1px solid #F15A29;
    margin-left: 15px;
}

.top-menu .login {
    background: transparent;
    color: #f15a29;
}

.top-menu .sign-up {
    background: #f15a29;
    color: #fff;
}

/* end main menu */
/* start banner */
header .banner {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    background: url(img/home-clouds.png);
    background-size: cover;
}

header .banner form {
    position: relative;
    z-index: 100;
}

header .banner input {
    height: 40px;
    background: #ededed;
    color: rgba(65, 64, 66, 0.63);
    border: none;
    border-radius: 20px 0 0 20px;
    padding-left: 20px;
    margin: 0;
    margin-top: 24px;
    font-size: 18px;
    font-weight: normal;
    width: 210px;
}

header .banner input::-webkit-input-placeholder {
    color: rgba(65, 64, 66, 0.63);
}

header .banner input:-ms-input-placeholder {
    color: rgba(65, 64, 66, 0.63);
}

header .banner input::placeholder {
    color: rgba(65, 64, 66, 0.63);
}

header .banner input:focus {
    outline: none
}

header .banner button {
    font-size: 18px;
    border: none;
    background: #f15a29;
    height: 40px;
    color: #fff;
    padding: 0 20px;
    border-radius: 0 20px 20px 0;
    margin: -5px;
    font-weight: normal;
}

header .banner h1 {
    font-size: 64px;
    line-height: 78px;
    font-weight: normal;
    color: #414042;
    width: 362px;
    margin-top: 110px;
    margin-bottom: 0;
}

header .banner p {
    width: 360px;
    left: 1px;
    font-family: "HelveticaNeue", Helvetica, Arial, serif;
    font-size: 20px;
    color: #414042;
    line-height: 24px;
    margin-top: 10px;
}

header .banner h1,
header .banner p {
    z-index: 8888;
    position: relative;
}

header .banner img {
    max-width: 100%
}

@-webkit-keyframes animateToLeft40 {
    0% {
        opacity: 0;
        -webkit-transform: translate(40px, 0);
        transform: translate(40px, 0);
    }

    /* 99.999% {
        opacity: 1;
        transform: translate(0, 0);
    } */
    100% {
        opacity: 1;
        -webkit-transform: translate(0, 0);
        transform: translate(0, 0);
    }
}

@keyframes animateToLeft40 {
    0% {
        opacity: 0;
        -webkit-transform: translate(40px, 0);
        transform: translate(40px, 0);
    }

    /* 99.999% {
        opacity: 1;
        transform: translate(0, 0);
    } */
    100% {
        opacity: 1;
        -webkit-transform: translate(0, 0);
        transform: translate(0, 0);
    }
}

@-webkit-keyframes animateToLeft25 {
    0% {
        opacity: 0;
        -webkit-transform: translate(25px, 0);
        transform: translate(25px, 0);
    }

    /* 99.999% {
        opacity: 1;
        transform: translate(0, 0);
    } */
    100% {
        opacity: 1;
        -webkit-transform: translate(0, 0);
        transform: translate(0, 0);
    }
}

@keyframes animateToLeft25 {
    0% {
        opacity: 0;
        -webkit-transform: translate(25px, 0);
        transform: translate(25px, 0);
    }

    /* 99.999% {
        opacity: 1;
        transform: translate(0, 0);
    } */
    100% {
        opacity: 1;
        -webkit-transform: translate(0, 0);
        transform: translate(0, 0);
    }
}

header .banner img.artwork-1 {
    position: absolute;
    left: 29.98%;
    top: 211px;
    height: 323px;
    width: 727px;
    opacity: 0;
    -webkit-animation: animateToLeft40 1s ease-in-out forwards;
    animation: animateToLeft40 1s ease-in-out forwards;
    -webkit-animation-delay: .75s;
    animation-delay: .75s
}

header .banner img.artwork-2-1 {
    position: absolute;
    left: 50%;
    top: 151px;
    height: 427px;
    width: 507px;
}

header .banner img.artwork-3 {
    position: absolute;
    left: 38.67%;
    top: 270px;
    height: 217px;
    width: 597px;
    opacity: 0;
    -webkit-animation: animateToLeft25 1s ease-in-out forwards;
    animation: animateToLeft25 1s ease-in-out forwards;
    -webkit-animation-delay: .5s;
    animation-delay: .5s
}

/* end banner */
/* end header */
/* start our process */
.our-process {
    background: url(../img/home-path-2.svg);
    background-size: cover;
    padding: 60px 0;
    position: relative;
    /* height: 2246px; */
}

.our-process .bullet {
    position: absolute;
    height: 36px;
    width: 36px;
    border-radius: 50%;
    background: #fff;
}

.our-process .bullet-2 {
    /* left: 33.5%; */
    left: 39.5%;
    top: 691px;
}

.our-process .bullet-3 {
    left: 50%;
    top: 1150px;
}

.our-process .bullet-4 {
    /* left: 41.5%; */
    left: 54%;
    top: 1585px;
}

/* .our-process .step-2 .bullet {
    left: 43%;
}
.our-process .step-3 .bullet {
    left: 60%;
} */
.our-process h2,
.our-process p,
.our-process h3 {
    color: #fff;
    text-align: left;
}

.our-process h2 {
    font-size: 64px;
}

.our-process .container>p:first-of-type {
    /* width: 70%; */
    margin-left: auto;
    text-align: right;
}

.our-process h2:nth-of-type(1) {
    margin-left: auto;
    width: 747px;
    font-size: 64.0px;
    color: #fff;
    text-align: right;
    font-weight: normal;
    margin-bottom: 0;
}

.our-process .step:nth-of-type(2) h3,
.our-process .step:nth-of-type(4) h3,
.our-process .step:nth-of-type(2) p,
.our-process .step:nth-of-type(4) p {
    margin-left: auto;
    /* width: 70%; */
    text-align: right;
}

.our-process img {
    width: 160px;
}
/* ... */

